<resources>
    <string name="app_name">eggcelent</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logoDesc">Logo</string>
    <string name="eggcelent">eggcelent</string>
    <string name="prompt">how do you like your eggs?</string>
    <string name="scrambled_text">scrambled</string>
    <string name="poached_text">poached</string>
    <string name="sunny_side_up_text">sunny-side-up</string>
    <string name="boiled_text">boiled</string>
    <string name="boiled_prompt">how would you like your boiled egg?</string>
    <string name="poached_prompt">how would you like your poached egg?</string>
    <string name="scrambled_prompt">how would you like your scrambled egg?</string>
    <string name="sunny_side_up_prompt">how would you like your sunny-side up egg?</string>
    <string name="boiled_option_1">soft-boiled</string>
    <string name="boiled_option_2">jammy</string>
    <string name="boiled_option_3">medium-boiled</string>
    <string name="boiled_option_4">hard-boiled</string>
    <string name="poached_option_1">runny</string>
    <string name="poached_option_2">jammy</string>
    <string name="poached_option_3">medium-firm</string>
    <string name="poached_option_4">firm</string>
    <string name="sunny_side_up_option_1">runny</string>
    <string name="sunny_side_up_option_2">firm</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>