<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_yellow"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="144dp"
            android:layout_height="147dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/logoDesc"
            android:cropToPadding="false"
            android:paddingTop="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/egg_sitting" />

        <TextView
            android:id="@+id/boiled_prompt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gaegu_regular"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/boiled_prompt"
            android:textAlignment="center"
            android:textColor="@color/darker_brown"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/boiled_option_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/boiled_option_one_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/soft_boiled" />

            <TextView
                android:id="@+id/boiled_option_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:paddingEnd="60dp"
                android:paddingRight="60dp"
                android:clickable="false"
                android:textColor="@color/white"
                android:fontFamily="@font/gaegu_regular"
                android:textSize="30sp"
                android:text="@string/boiled_option_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boiled_option_two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/boiled_option_two_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/boiled_jammy" />

            <TextView
                android:id="@+id/boiled_option_two_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:clickable="false"
                android:paddingEnd="114dp"
                android:paddingRight="114dp"
                android:textColor="@color/white"
                android:fontFamily="@font/gaegu_regular"
                android:textSize="30sp"
                android:text="@string/boiled_option_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boiled_option_three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/boiled_option_three_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/boiled_main" />

            <TextView
                android:id="@+id/boiled_option_three_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:clickable="false"
                android:textColor="@color/white"
                android:fontFamily="@font/gaegu_regular"
                android:textSize="30sp"
                android:text="@string/boiled_option_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boiled_option_four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <ImageView
                android:id="@+id/boiled_option_four_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/hard_boiled" />

            <TextView
                android:id="@+id/boiled_option_four_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:paddingEnd="50dp"
                android:paddingRight="25dp"
                android:clickable="false"
                android:textColor="@color/white"
                android:fontFamily="@font/gaegu_regular"
                android:textSize="30sp"
                android:text="@string/boiled_option_4" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>