<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_yellow"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_back_arrow"
            android:backgroundTint="@color/darker_brown" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="144dp"
            android:layout_height="147dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logoDesc"
            android:cropToPadding="false"
            android:paddingTop="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/egg_sitting" />

        <TextView
            android:id="@+id/poached_prompt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/gaegu_regular"
            android:gravity="center"
            android:text="@string/poached_prompt"
            android:textAlignment="center"
            android:textColor="@color/darker_brown"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/poached_option_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poached_option_one_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/poached_runny" />

            <TextView
                android:id="@+id/poached_option_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:clickable="false"
                android:fontFamily="@font/gaegu_regular"
                android:paddingEnd="103dp"
                android:paddingRight="103dp"
                android:text="@string/poached_option_1"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poached_option_two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poached_option_two_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/poached_main" />

            <TextView
                android:id="@+id/poached_option_two_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:clickable="false"
                android:fontFamily="@font/gaegu_regular"
                android:paddingEnd="90dp"
                android:paddingRight="90dp"
                android:text="@string/poached_option_2"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poached_option_three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poached_option_three_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/poached_medium_firm" />

            <TextView
                android:id="@+id/poached_option_three_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:clickable="false"
                android:fontFamily="@font/gaegu_regular"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/poached_option_3"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poached_option_four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/layout_button"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poached_option_four_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|start"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:src="@drawable/poached_firm" />

            <TextView
                android:id="@+id/poached_option_four_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                android:clickable="false"
                android:fontFamily="@font/gaegu_regular"
                android:paddingEnd="120dp"
                android:paddingRight="120dp"
                android:text="@string/poached_option_4"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>